[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "mysql"] }

mongodb = "2.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }